<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="contentDescription">

    <data>

        <variable
            name="handler"
            type="com.panda.sleepy.demoforex.viewmodel.DealsViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/ebony">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_max="550dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed">

            <View
                android:id="@+id/background"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="42dp"
                android:background="@drawable/main_background"
                app:layout_constraintBottom_toBottomOf="@id/content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <include
                android:id="@+id/header"
                layout="@layout/layout_header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="@id/background"
                app:layout_constraintStart_toStartOf="@id/background"
                app:layout_constraintTop_toTopOf="parent"
                bind:title="@{@string/deals_title}" />

            <ScrollView
                android:id="@+id/content"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:overScrollMode="never"
                android:paddingBottom="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/background"
                app:layout_constraintHeight_max="420dp"
                app:layout_constraintStart_toStartOf="@id/background"
                app:layout_constraintTop_toBottomOf="@id/header"
                app:layout_constraintVertical_bias="0.0">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/tradeList"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:itemCount="3"
                        tools:listitem="@layout/item_trade" />

                    <TextView
                        android:id="@+id/do_not_worry"
                        style="@style/BigText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="24dp"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/do_not_worry"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tradeList" />

                    <TextView
                        android:id="@+id/info"
                        style="@style/InfoText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="24dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/george_soros"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/do_not_worry" />

                    <ImageView
                        android:id="@+id/portrait"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        android:src="@drawable/george_soros"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/info" />

                    <TextView
                        android:id="@+id/moreInfo"
                        style="@style/Link"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="32dp"
                        android:layout_marginTop="8dp"
                        android:onClick="@{() -> handler.getMoreInfo()}"
                        android:text="@string/more_info"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/portrait" />

                </LinearLayout>

            </ScrollView>

        </android.support.constraint.ConstraintLayout>

        <Button
            android:id="@+id/cancel"
            style="@style/CloseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:onClick="@{() -> handler.close()}"
            android:paddingEnd="24dp"
            android:paddingStart="24dp"
            android:text="@string/close"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    </android.support.constraint.ConstraintLayout>

</layout>